cluster/pods/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: postgres-persistent-storage
        persistentVolumeClaim:
          claimName: postgres-pv-claim
      containers:
      - name: main
        image: postgres:latest
        # resources:
        #   limits:
        #     memory: 512Mi
        #     cpu: "1"
        #   requests:
        #     memory: 256Mi
        #     cpu: "0.2"
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-persistent-storage
        ports:
        - containerPort: 5432
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: backend
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
  type: ClusterIP
